# CDK

./: .gitignore  CMakeLists.txt  Makefile  configure  configure.bat  configure.rb
include/CDK/: CDK  CDK.h  CdkFile  CdkFile.h  CdkFileInput  CdkFileInput.h  CdkFileOutput  CdkFileOutput.h  Core.h  NonConstructible  NonConstructible.h  NonCopyable  NonCopyable.h
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/crl/: CMakeLists.txt  main.cpp
src/cli/crl/sys/: crlapp.cpp  crlapp.h
src/core/: CMakeLists.txt  cdk.h  core.h
src/core/core/: defines.h  includes.h  typedefs.h
src/core/file/: cdkfile.cpp  cdkfile.h  cdkfileinput.cpp  cdkfileinput.h  cdkfileoutput.cpp  cdkfileoutput.h
src/core/sys/: nonconstructible.h  noncopyable.h
src/engine/: CMakeLists.txt  main.cpp
src/engine/sys/: engineapp.cpp  engineapp.h  rubylib.cpp  rubylib.h
tools/share/cmake/: Config.cmake  Macros.cmake
